After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669148 - ifnet: read_hostname fails to correctly unquote hostname value
ifnet: read_hostname fails to correctly unquote hostname value
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
0.9.x
Other Linux
: Normal normal
: ---
Assigned To: Dan Williams
Dan Williams
Depends on:
Blocks:
 
 
Reported: 2012-02-01 02:46 UTC by Alexandre Rostovtsev
Modified: 2012-02-13 10:09 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
proposed patch (1005 bytes, patch)
2012-02-01 02:47 UTC, Alexandre Rostovtsev
none Details | Review

Description Alexandre Rostovtsev 2012-02-01 02:46:11 UTC
Gentoo's /etc/conf.d/hostname is a shell script, and hostname is a shell variable. Its value needs to be properly unquoted with g_shell_unquote(). Otherwise, for example,

hostname='localhost'

results in networkmanager setting the hostname to "'localhost'" (with single quotes included).
Comment 1 Alexandre Rostovtsev 2012-02-01 02:47:45 UTC
Created attachment 206557 [details] [review]
proposed patch
Comment 2 Jiri Klimes 2012-02-13 10:09:37 UTC
Pushed as fe29aa967c7033029916adaedd6279a42c618de4
Thanks!