ifnet: properly unquote hostnames with g_shell_unquote() (bgo #669148)

If /etc/conf.d/hostname contains "hostname='foo'", then the hostname
needs to be set to "foo", not "'foo'".

https://bugzilla.gnome.org/show_bug.cgi?id=669148